more explation of functions, fixed strikethrougs, pageref still broken

--- a/Ch05-resample-lab.ipynb
+++ b/Ch05-resample-lab.ipynb
@@ -4,20 +4,16 @@
    "cell_type": "markdown",
    "id": "dc2d635a",
    "metadata": {},
-   "source": []
+   "source": [
+    "[![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/coatless-devcontainer/data-science?quickstart=1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6dde3cef",
    "metadata": {},
    "source": [
-    "# Cross-Validation and the Bootstrap\n",
-    "\n",
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/intro-stat-learning/ISLP_labs/blob/v2.2/Ch05-resample-lab.ipynb\">\n",
-    "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "</a>\n",
-    "\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/intro-stat-learning/ISLP_labs/v2.2?labpath=Ch05-resample-lab.ipynb)"
+    "# Cross-Validation and the Bootstrap"
    ]
   },
   {
@@ -27,7 +23,7 @@
    "source": [
     "In this lab, we explore the resampling techniques covered in this\n",
     "chapter. Some of the commands in this lab may take a while to run on\n",
-    "your computer.\n",
+    "your computer (or someone else's).\n",
     "\n",
     "We again begin by placing most of our imports at this top level."
    ]
@@ -37,12 +33,6 @@
    "execution_count": 1,
    "id": "f1deb5cc",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-04T23:19:13.493284Z",
-     "iopub.status.busy": "2024-06-04T23:19:13.492950Z",
-     "iopub.status.idle": "2024-06-04T23:19:14.143174Z",
-     "shell.execute_reply": "2024-06-04T23:19:14.142882Z"
-    },
     "lines_to_next_cell": 2
    },
    "outputs": [],
@@ -61,7 +51,8 @@
    "id": "afa08b62",
    "metadata": {},
    "source": [
-    "There are several new imports needed for this lab."
+    "There are several new imports needed for this lab:\n",
+    "* functools.partial – creates a new callable by “pre-filling” some arguments of another function (aka partial application)"
    ]
   },
   {
@@ -69,12 +60,6 @@
    "execution_count": 2,
    "id": "268c41b3",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-04T23:19:14.144884Z",
-     "iopub.status.busy": "2024-06-04T23:19:14.144773Z",
-     "iopub.status.idle": "2024-06-04T23:19:14.146541Z",
-     "shell.execute_reply": "2024-06-04T23:19:14.146330Z"
-    },
     "lines_to_next_cell": 2
    },
    "outputs": [],
@@ -86,6 +71,29 @@
     "      ShuffleSplit)\n",
     "from sklearn.base import clone\n",
     "from ISLP.models import sklearn_sm\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41071349-5579-4713-95b1-f3db6884df80",
+   "metadata": {},
+   "source": [
+    "If you dont know what these functions are for, the authors tell you in the lab. But for fun here is what they actually do and which cell they're actually used:\n",
+    "| Import                                     | What it’s used for                                                                                 | Cells where used                                                 |\n",
+    "| ------------------------------------------ | -------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |\n",
+    "| `numpy as np`                              | `mean`, `zeros`, `array`, `power.outer`, `add.outer`, `cov`, `random.default_rng`/`choice`, `sqrt` | 5, 6, 7, 8, 9, 10, 11, 12, 15, 17, 18, 22                        |\n",
+    "| `statsmodels.api as sm`                    | `sm.OLS(...).fit()` (linear models)                                                                | 4, 7, 8, 9, 10, 23*, 25*, 26 (*via `boot_SE`→`boot_OLS`)         |\n",
+    "| `ISLP.load_data`                           | Load datasets (`Auto`, `Portfolio`)                                                                | 3, 15                                                            |\n",
+    "| `ISLP.models.ModelSpec as MS`              | Build model matrices / formulas                                                                    | 4, 7*, 8*, 9, 21, 25 (*via `evalMSE`)                            |\n",
+    "| `ISLP.models.summarize`                    | Extract std. errors from fitted model                                                              | 24, 26                                                           |\n",
+    "| `ISLP.models.poly`                         | Polynomial features                                                                                | 7, 8, 25                                                         |\n",
+    "| `sklearn.model_selection.train_test_split` | Train/validation split                                                                             | 3, 8                                                             |\n",
+    "| `functools.partial`                        | Freeze args for bootstrap helper (`hp_func`, `quad_func`)                                          | 21, 25                                                           |\n",
+    "| `sklearn.model_selection.cross_validate`   | CV/validation scoring                                                                              | 9, 10, 12, 13, 14                                                |\n",
+    "| `sklearn.model_selection.KFold`            | 10-fold cross-validation splitter                                                                  | 12                                                               |\n",
+    "| `sklearn.model_selection.ShuffleSplit`     | Validation-set style splits                                                                        | 13, 14                                                           |\n",
+    "| `sklearn.base.clone`                       | Clone `ModelSpec` inside bootstrap (`boot_OLS`)                                                    | 20 (definition used by calls in 22–25)                           |\n",
+    "| `ISLP.models.sklearn_sm`                   | Wrap `statsmodels` for `sklearn` CV                                                                | 9, 10 (object it created, `hp_model`, is referenced again in 24) |\n"
    ]
   },
   {
@@ -110,16 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "22f44ae0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-04T23:19:14.147809Z",
-     "iopub.status.busy": "2024-06-04T23:19:14.147730Z",
-     "iopub.status.idle": "2024-06-04T23:19:14.152606Z",
-     "shell.execute_reply": "2024-06-04T23:19:14.152414Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Auto = load_data('Auto')\n",
@@ -138,16 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0c32e917",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-04T23:19:14.153847Z",
-     "iopub.status.busy": "2024-06-04T23:19:14.153757Z",
-     "iopub.status.idle": "2024-06-04T23:19:14.157537Z",
-     "shell.execute_reply": "2024-06-04T23:19:14.157339Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hp_mm = MS(['horsepower'])\n",
@@ -168,24 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "86ce4f85",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-04T23:19:14.158717Z",
-     "iopub.status.busy": "2024-06-04T23:19:14.158637Z",
-     "iopub.status.idle": "2024-06-04T23:19:14.162177Z",
-     "shell.execute_reply": "2024-06-04T23:19:14.161910Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23.61661706966988"
+       "np.float64(23.61661706966988)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,16 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "50a66a97",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-04T23:19:14.163466Z",
-     "iopub.status.busy": "2024-06-04T23:19:14.163397Z",
-     "iopub.status.idle": "2024-06-04T23:19:14.165323Z",
-     "shell.execute_reply": "2024-06-04T23:19:14.165076Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def evalMSE(terms,\n",
@@ -719,8 +699,8 @@
     "To illustrate the bootstrap, we\n",
     "start with a simple example.\n",
     "The  `Portfolio`  data set in the `ISLP` package is described\n",
-    "in Section~\\ref{Ch5:sec:bootstrap}. The goal is to estimate the\n",
-    "sampling variance of the parameter $\\alpha$ given in formula~(\\ref{Ch5:min.var}).  We will\n",
+    "in Section\\~\\ref{Ch5:sec:bootstrap}. The goal is to estimate the\n",
+    "sampling variance of the parameter $\\alpha$ given in formula\\~\\(\\ref{Ch5:min.var}).  We will\n",
     "create a function\n",
     "`alpha_func()`, which takes as input a dataframe `D` assumed\n",
     "to have columns `X` and `Y`, as well as a\n",
@@ -1165,7 +1145,7 @@
    "metadata": {},
    "source": [
     "The standard error estimates for $\\hat{\\beta}_0$ and $\\hat{\\beta}_1$\n",
-    "obtained using the formulas  from Section~\\ref{Ch3:secoefsec}  are\n",
+    "obtained using the formulas  from Section\\~\\ref{Ch3:secoefsec}  are\n",
     "0.717 for the\n",
     "intercept and\n",
     "0.006 for the\n",
@@ -1173,13 +1153,13 @@
     "obtained using the bootstrap.  Does this indicate a problem with the\n",
     "bootstrap? In fact, it suggests the opposite.  Recall that the\n",
     "standard formulas given in\n",
-    " {Equation~\\ref{Ch3:se.eqn} on page~\\pageref{Ch3:se.eqn}}\n",
+    " {Equation\\~\\ref{Ch3:se.eqn} on page\\~\\pageref{Ch3:se.eqn}}\n",
     "rely on certain assumptions. For example,\n",
     "they depend on the unknown parameter $\\sigma^2$, the noise\n",
     "variance. We then estimate $\\sigma^2$ using the RSS. Now although the\n",
     "formula for the standard errors do not rely on the linear model being\n",
     "correct, the estimate for $\\sigma^2$ does.  We see\n",
-    " {in Figure~\\ref{Ch3:polyplot} on page~\\pageref{Ch3:polyplot}}  that there is\n",
+    " {in Figure\\~\\ref{Ch3:polyplot} on page\\~\\pageref{Ch3:polyplot}}  that there is\n",
     "a non-linear relationship in the data, and so the residuals from a\n",
     "linear fit will be inflated, and so will $\\hat{\\sigma}^2$.  Secondly,\n",
     "the standard formulas assume (somewhat unrealistically) that the $x_i$\n",
@@ -1192,10 +1172,10 @@
     "Below we compute the bootstrap standard error estimates and the\n",
     "standard linear regression estimates that result from fitting the\n",
     "quadratic model to the data. Since this model provides a good fit to\n",
-    "the data (Figure~\\ref{Ch3:polyplot}), there is now a better\n",
+    "the data (Figure\\~\\ref{Ch3:polyplot}), there is now a better\n",
     "correspondence between the bootstrap estimates and the standard\n",
     "estimates of ${\\rm SE}(\\hat{\\beta}_0)$, ${\\rm SE}(\\hat{\\beta}_1)$ and\n",
-    "${\\rm SE}(\\hat{\\beta}_2)$."
+    "${\\rm SE}(\\hat{\\beta}_2)$.\n"
    ]
   },
   {
